fix font size and align image on title

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 * {
   margin: 0;
   padding: 0;
+}
+body {
   font-family: "Roboto";
   font-size: 10px;
   line-height: 3.5em;
@@ -19,6 +21,9 @@ h1 {
   font-size: 9em;
   text-align: center;
   text-transform: uppercase;
+}
+h1 img {
+  margin-bottom: -15px;
 }
 h2 {
   font-size: 5em;
